--- a/index.html
+++ b/index.html
@@ -2,94 +2,151 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YouTube</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-white min-h-screen flex flex-col">
 
-    <!-- Navbar -->
-    <header class="w-full h-16 flex items-center px-4 md:px-8 bg-white border-b shadow-sm">
-        <div class="flex items-center space-x-4">
-            <!-- Hamburger Icon -->
-            <button class="p-2 rounded-full hover:bg-gray-100">
-                <span class="material-icons">menu</span>
-            </button>
+  <!-- Navbar -->
+  <header class="w-full h-16 flex items-center px-4 md:px-8 bg-white border-b shadow-sm">
+    <div class="flex items-center space-x-4">
+      <!-- Hamburger Icon -->
+      <button class="p-2 rounded-full hover:bg-gray-100">
+        <span class="material-icons">menu</span>
+      </button>
 
-            <!-- YouTube Logo -->
-            <a href="#" class="flex items-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" class="h-5"
-                    alt="YouTube Logo">
-            </a>
-        </div>
-
-        <!-- Search Bar -->
-        <div class="flex-1 mx-4 flex items-center justify-center">
-            <div class="relative w-full max-w-md">
-                <input type="text" placeholder="Search"
-                    class="w-full border rounded-full px-4 py-2 pr-12 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                <!-- Search Icon with Right Rounded Corners -->
-                <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200">
-                    <span class="material-icons text-gray-600">search</span>
-                </button>
-            </div>
-            <button class="p-2 ml-2 rounded-full bg-gray-100 hover:bg-gray-200">
-                <span class="material-icons">mic</span>
-            </button>
-        </div>
-
-        <!-- Right Section: Three Dots Menu + Sign-in Button -->
-        <div class="flex items-center space-x-4">
-            <button class="p-2 rounded-full hover:bg-gray-100">
-                <span class="material-icons">more_vert</span>
-            </button>
-            <button
-                class="px-4 py-2 text-blue-600 border border-blue-600 rounded-full hover:bg-blue-600 hover:text-white">
-                Sign in
-            </button>
-        </div>
-    </header>
-
-    <!-- Main Layout -->
-    <div class="flex flex-1">
-        <!-- Sidebar -->
-        <aside
-            class="w-16 md:w-64 h-screen bg-white border-r hidden md:flex flex-col items-center md:items-start p-4 space-y-6">
-            <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-                <span class="material-icons">home</span>
-                <span class="hidden md:inline">Home</span>
-            </a>
-            <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-                <span class="material-icons">play_arrow</span>
-                <span class="hidden md:inline">Shorts</span>
-            </a>
-            <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-                <span class="material-icons">subscriptions</span>
-                <span class="hidden md:inline">Subscriptions</span>
-            </a>
-            <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-                <span class="material-icons">person</span>
-                <span class="hidden md:inline">You</span>
-            </a>
-            <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-                <span class="material-icons">history</span>
-                <span class="hidden md:inline">History</span>
-            </a>
-        </aside>
-
-        <!-- Main Content -->
-        <main class="flex-1 flex flex-col  items-center justify-center">
-            <div class="text-center space-y-2 shadow-lg p-8 rounded-lg">
-                <p class="text-2xl font-semibold">Try searching to get started</p>
-                <p class="text-gray-600">Start watching videos to help us build a feed of videos you'll love.</p>
-            </div>
-        </main>
+      <!-- YouTube Logo -->
+      <a href="#" class="flex items-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" class="h-5" alt="YouTube Logo">
+      </a>
     </div>
 
-    <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Search Bar -->
+    <div class="flex-1 mx-4 flex items-center justify-center">
+      <div class="relative w-full max-w-md">
+        <input type="text" id="search-input" placeholder="Search"
+          class="w-full border rounded-full px-4 py-2 pr-12 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <!-- Search Icon with Right Rounded Corners -->
+        <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200" onclick="searchVideos()">
+          <span class="material-icons text-gray-600">search</span>
+        </button>
+      </div>
+      <button class="p-2 ml-2 rounded-full bg-gray-100 hover:bg-gray-200">
+        <span class="material-icons">mic</span>
+      </button>
+    </div>
+
+    <!-- Right Section: Three Dots Menu + Sign-in Button -->
+    <div class="flex items-center space-x-4">
+      <button class="p-2 rounded-full hover:bg-gray-100">
+        <span class="material-icons">more_vert</span>
+      </button>
+      <button class="px-4 py-2 text-blue-600 border border-blue-600 rounded-full hover:bg-blue-600 hover:text-white">
+        Sign in
+      </button>
+    </div>
+  </header>
+
+  <!-- Main Layout -->
+  <div class="flex flex-1">
+    <!-- Sidebar -->
+    <aside class="w-16 md:w-64 h-screen bg-white border-r hidden md:flex flex-col items-center md:items-start p-4 space-y-6">
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
+        <span class="material-icons">home</span>
+        <span class="hidden md:inline">Home</span>
+      </a>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
+        <span class="material-icons">play_arrow</span>
+        <span class="hidden md:inline">Shorts</span>
+      </a>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
+        <span class="material-icons">subscriptions</span>
+        <span class="hidden md:inline">Subscriptions</span>
+      </a>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
+        <span class="material-icons">person</span>
+        <span class="hidden md:inline">You</span>
+      </a>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
+        <span class="material-icons">history</span>
+        <span class="hidden md:inline">History</span>
+      </a>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="flex-1 flex flex-col items-center justify-center p-4">
+      <div id="video-list" class="grid grid-cols-1 md:grid-cols-3 gap-4 video-container"></div>
+
+      <script>
+        const API_KEY = 'AIzaSyDG9gl5qQ1TTmRoSTGZFDtMaiid5R-eN_k'; // Replace with your YouTube API key
+        const videoList = document.getElementById('video-list');
+
+        // Fetch videos from the YouTube API for the default channel
+        async function fetchYouTubeVideos(query = '') {
+          let url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&part=snippet,id&type=video&maxResults=5`;
+          if (query) {
+            url += `&q=${query}`;
+          }
+          const response = await fetch(url);
+          const data = await response.json();
+          displayVideos(data.items);
+        }
+
+        // Display fetched videos on the page
+        function displayVideos(videos) {
+          videoList.innerHTML = ''; // Clear previous videos
+          videos.forEach(video => {
+            if (video.id.videoId) {
+              const videoElement = document.createElement('div');
+              videoElement.classList.add('video', 'cursor-pointer');
+              videoElement.innerHTML = `
+                <iframe
+                  src="https://www.youtube.com/embed/${video.id.videoId}"
+                  class="w-full h-64 md:h-48"
+                  frameborder="0"
+                  allowfullscreen>
+                </iframe>
+                <h3 class="text-lg font-semibold mt-2">${video.snippet.title}</h3>
+                <p class="text-sm text-gray-500">${video.snippet.description}</p>
+              `;
+              videoElement.addEventListener('click', () => enlargeVideo(video.id.videoId)); // Click to enlarge
+              videoList.appendChild(videoElement);
+            }
+          });
+        }
+
+        // Function to enlarge video
+        function enlargeVideo(videoId) {
+          videoList.innerHTML = `
+            <div class="flex justify-center items-center w-full h-screen">
+              <iframe
+                src="https://www.youtube.com/embed/${videoId}"
+                class="w-full h-screen"
+                frameborder="0"
+                allowfullscreen>
+              </iframe>
+            </div>
+          `;
+        }
+
+        // Fetch videos based on search input
+        function searchVideos() {
+          const query = document.getElementById('search-input').value;
+          fetchYouTubeVideos(query);
+        }
+
+        // Fetch and display default videos on page load
+        fetchYouTubeVideos();
+      </script>
+
+    </main>
+  </div>
+
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </body>
 
 </html>
