--- a/index.html
+++ b/index.html
@@ -6,45 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
+
 </head>
 
-<body class="bg-white min-h-screen flex flex-col">
+<body class="bg-gray-100 min-h-screen flex flex-col">
 
   <!-- Navbar -->
-  <header class="w-full h-16 flex items-center px-4 md:px-8 bg-white border-b shadow-sm">
+  <header class="w-full h-16 flex items-center px-4 md:px-8 bg-rose-950 text-white shadow-sm">
     <div class="flex items-center space-x-4">
       <!-- Hamburger Icon -->
-      <button class="p-2 rounded-full hover:bg-gray-100">
-        <span class="material-icons">menu</span>
+      <button class="p-2 rounded-full hover:bg-neutral-300">
+        <span class="material-icons hover:text-black">menu</span>
       </button>
 
       <!-- YouTube Logo -->
-      <a href="#" class="flex items-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" class="h-5" alt="YouTube Logo">
-      </a>
+      
+        <i class="fa-brands fa-youtube text-white"></i>      
     </div>
 
     <!-- Search Bar -->
     <div class="flex-1 mx-4 flex items-center justify-center">
-      <div class="relative w-full max-w-md">
-        <input type="text" id="search-input" placeholder="Search"
-          class="w-full border rounded-full px-4 py-2 pr-12 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        <!-- Search Icon with Right Rounded Corners -->
-        <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200" onclick="searchVideos()">
-          <span class="material-icons text-gray-600">search</span>
-        </button>
+        <div class="relative w-full max-w-md">
+          <input type="text" id="search-input" placeholder="Search"
+            class="w-full border border-gray-300 rounded-full px-4 py-2 pr-12 focus:outline-none text-black focus:ring-2 focus:ring-blue-500 cursor-pointer">
+          <!-- Search Icon with Right Rounded Corners -->
+          <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200" onclick="searchVideos()" style="cursor: pointer;">
+            <span class="material-icons text-gray-600">search</span>
+          </button>
+        </div>
       </div>
-      <button class="p-2 ml-2 rounded-full bg-gray-100 hover:bg-gray-200">
-        <span class="material-icons">mic</span>
-      </button>
-    </div>
+      
 
     <!-- Right Section: Three Dots Menu + Sign-in Button -->
     <div class="flex items-center space-x-4">
-      <button class="p-2 rounded-full hover:bg-gray-100">
-        <span class="material-icons">more_vert</span>
+      <button class="p-2 rounded-full hover:bg-neutral-300">
+        <span class="material-icons hover:text-black">more_vert</span>
       </button>
-      <button class="px-4 py-2 text-blue-600 border border-blue-600 rounded-full hover:bg-blue-600 hover:text-white">
+      <button class="px-4 py-2 text-rose-950 border border-white rounded-full bg-white hover:font-semibold hover:bg-neutral-300 ">
         Sign in
       </button>
     </div>
@@ -53,40 +52,41 @@
   <!-- Main Layout -->
   <div class="flex flex-1">
     <!-- Sidebar -->
-    <aside class="w-16 md:w-64 h-screen bg-white border-r hidden md:flex flex-col items-center md:items-start p-4 space-y-6">
-      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-        <span class="material-icons">home</span>
-        <span class="hidden md:inline">Home</span>
+    <aside class="w-16 md:w-64 h-screen bg-neutral-300 border-r hidden md:flex flex-col items-center md:items-start p-4 space-y-6">
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2 transition-transform transform hover:scale-105 hover:bg-gray-100 p-2 rounded-lg">
+        <span class="material-icons text-rose-950">home</span>
+        <span class="hidden md:inline text-black font-semibold">Home</span>
       </a>
-      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-        <span class="material-icons">play_arrow</span>
-        <span class="hidden md:inline">Shorts</span>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2 transition-transform transform hover:scale-105 hover:bg-gray-100 p-2 rounded-lg">
+        <span class="material-icons text-rose-950">play_arrow</span>
+        <span class="hidden md:inline text-black font-semibold">Shorts</span>
       </a>
-      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-        <span class="material-icons">subscriptions</span>
-        <span class="hidden md:inline">Subscriptions</span>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2 transition-transform transform hover:scale-105 hover:bg-gray-100 p-2 rounded-lg">
+        <span class="material-icons text-rose-950">subscriptions</span>
+        <span class="hidden md:inline text-black font-semibold">Subscriptions</span>
       </a>
-      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-        <span class="material-icons">person</span>
-        <span class="hidden md:inline">You</span>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2 transition-transform transform hover:scale-105 hover:bg-gray-100 p-2 rounded-lg">
+        <span class="material-icons text-rose-950">person</span>
+        <span class="hidden md:inline text-black font-semibold">You</span>
       </a>
-      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2">
-        <span class="material-icons">history</span>
-        <span class="hidden md:inline">History</span>
+      <a href="#" class="text-gray-700 flex flex-col items-center md:flex-row md:space-x-2 transition-transform transform hover:scale-105 hover:bg-gray-100 p-2 rounded-lg">
+        <span class="material-icons text-rose-950">history</span>
+        <span class="hidden md:inline text-black font-semibold">History</span>
       </a>
     </aside>
 
     <!-- Main Content -->
     <main class="flex-1 flex flex-col items-center justify-center p-4">
-      <div id="video-list" class="grid grid-cols-1 md:grid-cols-3 gap-4 video-container"></div>
+      <div id="video-list" class="grid grid-cols-1 md:grid-cols-3 gap-6 video-container"></div>
 
       <script>
         const API_KEY = 'AIzaSyDG9gl5qQ1TTmRoSTGZFDtMaiid5R-eN_k'; // Replace with your YouTube API key
         const videoList = document.getElementById('video-list');
+        let debounceTimer;
 
-        // Fetch videos from the YouTube API for the default channel
+        // Fetch videos from the YouTube API
         async function fetchYouTubeVideos(query = '') {
-          let url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&part=snippet,id&type=video&maxResults=5`;
+          let url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&part=snippet,id&type=video&maxResults=6`;
           if (query) {
             url += `&q=${query}`;
           }
@@ -101,15 +101,15 @@
           videos.forEach(video => {
             if (video.id.videoId) {
               const videoElement = document.createElement('div');
-              videoElement.classList.add('video', 'cursor-pointer');
+              videoElement.classList.add('video', 'cursor-pointer', 'hover:scale-105', 'transition-transform', 'duration-300', 'rounded-lg', 'bg-white', 'shadow-lg', 'p-4');
               videoElement.innerHTML = `
                 <iframe
                   src="https://www.youtube.com/embed/${video.id.videoId}"
-                  class="w-full h-64 md:h-48"
+                  class="w-full h-64 md:h-48 rounded-lg"
                   frameborder="0"
                   allowfullscreen>
                 </iframe>
-                <h3 class="text-lg font-semibold mt-2">${video.snippet.title}</h3>
+                <h3 class="text-lg font-semibold mt-2 text-gray-800">${video.snippet.title}</h3>
                 <p class="text-sm text-gray-500">${video.snippet.description}</p>
               `;
               videoElement.addEventListener('click', () => enlargeVideo(video.id.videoId)); // Click to enlarge
@@ -121,10 +121,10 @@
         // Function to enlarge video
         function enlargeVideo(videoId) {
           videoList.innerHTML = `
-            <div class="flex justify-center items-center w-full h-screen">
+            <div class="flex justify-center items-center w-full h-screen bg-gray-800">
               <iframe
                 src="https://www.youtube.com/embed/${videoId}"
-                class="w-full h-screen"
+                class="w-full h-screen rounded-lg"
                 frameborder="0"
                 allowfullscreen>
               </iframe>
@@ -132,14 +132,20 @@
           `;
         }
 
-        // Fetch videos based on search input
+        // Fetch videos based on search input with a debounce effect
         function searchVideos() {
-          const query = document.getElementById('search-input').value;
-          fetchYouTubeVideos(query);
+          clearTimeout(debounceTimer);
+          debounceTimer = setTimeout(() => {
+            const query = document.getElementById('search-input').value;
+            fetchYouTubeVideos(query);
+          }, 300); // Debounce set to 300ms to prevent excessive API calls
         }
 
         // Fetch and display default videos on page load
         fetchYouTubeVideos();
+
+        // Dynamically fetch suggestions while typing
+        document.getElementById('search-input').addEventListener('input', searchVideos);
       </script>
 
     </main>
