--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" ></script>
 
 </head>
 
@@ -22,21 +21,23 @@
 
       <!-- YouTube Logo -->
       
-        <i class="fa-brands fa-youtube text-white"></i>      
+      <a href="#" class="flex items-center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" class="h-5" alt="YouTube Logo">
+      </a>
     </div>
 
     <!-- Search Bar -->
     <div class="flex-1 mx-4 flex items-center justify-center">
-        <div class="relative w-full max-w-md">
-          <input type="text" id="search-input" placeholder="Search"
-            class="w-full border border-gray-300 rounded-full px-4 py-2 pr-12 focus:outline-none text-black focus:ring-2 focus:ring-blue-500 cursor-pointer">
-          <!-- Search Icon with Right Rounded Corners -->
-          <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200" onclick="searchVideos()" style="cursor: pointer;">
-            <span class="material-icons text-gray-600">search</span>
-          </button>
-        </div>
-      </div>
-      
+  <div class="relative w-full max-w-md">
+    <input type="text" id="search-input" placeholder="Search"
+      class="w-full border border-gray-300 rounded-full px-4 py-2 pr-12 focus:outline-none text-black focus:ring-2 focus:ring-blue-500 cursor-pointer">
+    <!-- Search Icon with Right Rounded Corners -->
+    <button class="absolute right-0 top-0 h-full bg-gray-100 p-2 rounded-r-full hover:bg-gray-200" onclick="searchVideos()" style="cursor: pointer;">
+      <span class="material-icons text-gray-600">search</span>
+    </button>
+  </div>
+</div>
+
 
     <!-- Right Section: Three Dots Menu + Sign-in Button -->
     <div class="flex items-center space-x-4">
@@ -80,7 +81,7 @@
       <div id="video-list" class="grid grid-cols-1 md:grid-cols-3 gap-6 video-container"></div>
 
       <script>
-        const API_KEY = 'AIzaSyDG9gl5qQ1TTmRoSTGZFDtMaiid5R-eN_k'; // Replace with your YouTube API key
+        const API_KEY = 'AIzaSyCN0dXTQhQIjrREeDCAaqes41i8gOAx55U'; // Replace with your YouTube API key
         const videoList = document.getElementById('video-list');
         let debounceTimer;
 
